# LE-Profiler

./: .gitignore  LICENSE  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
LE_Profiler/: G_Code_Rip.py  __init__.py
LE_Profiler/static/js/: Profiler.js
LE_Profiler/templates/: Profiler_tab.jinja2  profiler_settings.jinja2  profiler_tab.jinja2
extras/: Profiler.md  README.txt
